--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
-
+html,body{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -12,11 +14,12 @@
 .body{
     display: flex;
     flex-direction: column;
-    margin: 0 100px;
+    /* margin: 0 100px; */
+    /* align-items: center; */
 }
 .header{
     width: 100%;
-    height: 1vh;
+    /* height: 1vh; */
 }
 .head{
     display: grid;
@@ -55,11 +58,13 @@
 .header-content{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin: 0 10%;
 }
 .header-content .header-content-left{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* align-items: center; */
 }
 .header-content .header-content-left h1{
     font-family: 'Montserrat', sans-serif;
@@ -96,6 +101,53 @@
     margin-left: 1.9em;
 }
 .header-content .header-content-right img{
+    /* height: 80%; */
+    width: auto;
+}
+
+/* Services CSS */
+.services{
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    margin-bottom: 2em;
+}
+.services_oferred_header{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 3em;
+}
+.services_oferred_header h1{
+    margin-top: -1em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+    background-color: #000;
+    color: #ffffff;
+    display: inline-block;
+    /* width: 30%; */
+    padding: 7px;
+    font-size: 1.5em;
+    align-items: flex-end;
+    width: 40%;
+}
+.services_oferred_header h1::before{
+    position: absolute;
+    /* background-color: #000; */
+    /* width: 100px;
+    height: 100px; */
+    margin-top: 35px;
+    margin-right: -1em;
+    content: "";
+    border-style: solid;
+    border-color: #000 transparent transparent transparent;
+    border-width: 10px;
+}
+.services_left{
+    display: flex;
+    flex-direction: row-reverse;
+    /* align-items: center; */
+}
+.services_left img{
     width: 80%;
     height: auto;
 }
